# mathcoin

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
api/: .env  .env.example  Cargo.toml  Dockerfile
api/migrations/: 001_users.sql  002_challenges.sql  003_earnings.sql  004_claim_address.sql  005_distributions.sql  006_distribution_entries.sql  007_indexer_state.sql
api/src/: auth.rs  challenge.rs  config.rs  difficulty.rs  error.rs  lib.rs  main.rs  rate_limit.rs  state.rs
api/src/chain/: client.rs  indexer.rs  mod.rs  publisher.rs  tx_submitter.rs
api/src/routes/: audit.rs  challenge.rs  claim_address.rs  claim_data.rs  claim_relay.rs  me.rs  mint.rs  mod.rs  session.rs  stats.rs
api/tests/: auth_verifier_tests.rs  chain_tests.rs  challenge_tests.rs  concurrency_tests.rs  config_tests.rs  db_constraints_tests.rs  difficulty_tests.rs  error_tests.rs  handler_tests.rs  indexer_tests.rs  publisher_adapter_tests.rs
contracts/: .gitignore  README.md
contracts/cache/: solidity-files-cache.json  test-failures
contracts/script/: Deploy.s.sol
contracts/src/: MathCoin.sol
contracts/test/: MathCoin.t.sol  MerkleParity.t.sol
contracts/test/fixtures/: parity_proof.json
docs/: SECURITY.md
publisher/: package-lock.json  package.json
publisher/src/: buildMerkleTree.ts  cli.ts  publish.ts
publisher/test/: buildMerkleTree.test.ts  publish.test.ts
scripts/: setup.sh
web/: .env  .env.example  package-lock.json  package.json  vite.config.ts
web/src/: style.css
web/src/components/: Audit.vue  ClaimAddress.vue  ClaimButton.vue  Game.vue  (+3 more)
(+5 files in other folders)
