[package]
name = "mathcoin-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", features = ["use_pem", "aws_lc_rs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
async-trait = "0.1"
base64 = "0.22"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
alloy-primitives = "0.8"

[dev-dependencies]
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
ecdsa = { version = "0.16", features = ["pem"] }
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
tower = "0.5"
rand = "0.8"
